main/default/objects/Policy__c/Policy__c.object-meta.xml
<CustomObject>
    <label>Policy</label>
    <nameField>
        <displayFormat>Pol-{0000}</displayFormat>
        <label>Policy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>