main/default/objects/Policy__c/fields/audit__c.field-meta.xml
<CustomField>
    <fullName>audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>audit</label>
    <type>Checkbox</type>
</CustomField>