main/default/objects/Policy__c/fields/Binding_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Binding_License_Number__c</fullName>
    <label>Binding License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>