main/default/objects/Policy__c/fields/Binding_License_Owner__c.field-meta.xml
<CustomField>
    <fullName>Binding_License_Owner__c</fullName>
    <label>Binding License Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Producer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>