main/default/objects/Policy__c/fields/Binding_License_Owner_Address__c.field-meta.xml
<CustomField>
    <fullName>Binding_License_Owner_Address__c</fullName>
    <label>Binding License Owner Address</label>
    <type>TextArea</type>
</CustomField>