main/default/objects/Policy__c/fields/Binding_License_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Binding_License_Owner_Name__c</fullName>
    <label>Binding License Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>