main/default/objects/Policy__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Payment</fullName>
            </value>
            <value>
                <fullName>Business Closed</fullName>
            </value>
            <value>
                <fullName>Insured Request</fullName>
            </value>
            <value>
                <fullName>Sanctions/OFAC</fullName>
            </value>
            <value>
                <fullName>Merger or Acquisition</fullName>
            </value>
            <value>
                <fullName>Completion of Operation</fullName>
            </value>
            <value>
                <fullName>Underwriting Reasons</fullName>
            </value>
            <value>
                <fullName>Finance Company Request</fullName>
            </value>
            <value>
                <fullName>Product Unsuitable / Misunderstood</fullName>
            </value>
            <value>
                <fullName>Product too expensive</fullName>
            </value>
            <value>
                <fullName>Alternate Product Purchased</fullName>
            </value>
            <value>
                <fullName>Cover overlapped with pre-existing cover</fullName>
            </value>
            <value>
                <fullName>Product cancelled within cooling off period</fullName>
            </value>
            <value>
                <fullName>Product cancelled by Underwriter</fullName>
            </value>
            <value>
                <fullName>Poor service / complaint</fullName>
            </value>
            <value>
                <fullName>Cover no longer required</fullName>
            </value>
            <value>
                <fullName>Other (administrative reason)</fullName>
            </value>
            <value>
                <fullName>Not Known</fullName>
            </value>
            <value>
                <fullName>Non Payment of premium</fullName>
            </value>
            <value>
                <fullName>Cancellation ab initio</fullName>
                <isActive>false</isActive>
                <label>Cancellation ab initio</label>
            </value>
            <value>
                <fullName>Cancellation mid term</fullName>
                <isActive>false</isActive>
                <label>Cancellation mid term</label>
            </value>
            <value>
                <fullName>Cancelled due to non-payment of premium</fullName>
                <isActive>false</isActive>
                <label>Cancelled due to non-payment of premium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>