main/default/objects/Policy__c/fields/Endorsement_Change_Description__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Change_Description__c</fullName>
    <label>Endorsement Change Description</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broaden Cover - Increased Limit(s)</fullName>
            </value>
            <value>
                <fullName>Broaden Cover - Coverage(s) added</fullName>
            </value>
            <value>
                <fullName>Policy Duration Change - Extension of Policy</fullName>
            </value>
            <value>
                <fullName>Policy Duration Change - Shortening of Policy</fullName>
            </value>
            <value>
                <fullName>Restrict Cover - Decreased Limit(s)</fullName>
            </value>
            <value>
                <fullName>Restrict Cover - Coverage(s) removed</fullName>
            </value>
            <value>
                <fullName>Administrative - Change of Insured(s) Name</fullName>
            </value>
            <value>
                <fullName>Administrative - Update Insured Address</fullName>
            </value>
            <value>
                <fullName>Administrative - Change of Broker</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Reinstatement</fullName>
            </value>
            <value>
                <fullName>Extended Reporting Period (ERP)</fullName>
            </value>
            <value>
                <fullName>Coverage Cancel and Replace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>