main/default/objects/Policy__c/fields/Initial_Premium__c.field-meta.xml
<CustomField>
    <fullName>Initial_Premium__c</fullName>
    <label>Initial Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>