main/default/objects/Policy__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOA Not Generated</fullName>
            </value>
            <value>
                <fullName>Sent to RAC</fullName>
            </value>
            <value>
                <fullName>Processed in EPIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>