main/default/objects/Policy__c/fields/Is_Signature_Pack_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Signature_Pack_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Signature Pack Uploaded</label>
    <type>Checkbox</type>
</CustomField>