main/default/objects/Policy__c/fields/Master_Binder__c.field-meta.xml
<CustomField>
    <fullName>Master_Binder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Binder</label>
    <referenceTo>Master_Binder__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>