main/default/objects/Policy__c/fields/Net_Endorsement__c.field-meta.xml
<CustomField>
    <fullName>Net_Endorsement__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Total_Premium__c)), NOT(ISBLANK(Initial_Premium__c))), Total_Premium__c-Initial_Premium__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Endorsement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>