main/default/objects/Policy__c/fields/NIPR_Results__c.field-meta.xml
<CustomField>
    <fullName>NIPR_Results__c</fullName>
    <label>NIPR Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>