main/default/objects/Policy__c/fields/NJ_Transaction_Code__c.field-meta.xml
<CustomField>
    <fullName>NJ_Transaction_Code__c</fullName>
    <label>NJ Transaction Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>