main/default/objects/Policy__c/fields/Number_Open_Subjectivity_Bound_Quote__c.field-meta.xml
<CustomField>
    <fullName>Number_Open_Subjectivity_Bound_Quote__c</fullName>
    <label>Number Open Subjectivity Bound Quote</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>