main/default/objects/Policy__c/fields/Parent_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Policy_Number__c</fullName>
    <description>Will be used to store Parent policy no from where it is cloned from in case of Renewal</description>
    <label>Parent Policy Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>