main/default/objects/Policy__c/fields/Pending_or_Prior_Proceedings_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_or_Prior_Proceedings_Date__c</fullName>
    <label>Pending or Prior Proceedings Date</label>
    <type>Date</type>
</CustomField>