main/default/objects/Policy__c/fields/Policy_Document_sent__c.field-meta.xml
<CustomField>
    <fullName>Policy_Document_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policy Document sent</label>
    <type>Checkbox</type>
</CustomField>