main/default/objects/Policy__c/fields/Renewal_Completed__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Completed?</label>
    <type>Checkbox</type>
</CustomField>