main/default/objects/Policy__c/recordTypes/Albus.recordType-meta.xml
<RecordType>
    <fullName>Albus</fullName>
    <active>true</active>
    <label>Albus</label>
</RecordType>