main/default/objects/Policy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Policy_Number__c</columns>
    <columns>Policy_Status__c</columns>
    <columns>Cancellation_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>