main/default/objects/Policy__c/listViews/Aqueous_PI.listView-meta.xml
<ListView>
    <fullName>Aqueous_PI</fullName>
    <columns>NAME</columns>
    <columns>Policy_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Layer__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Total_Premium__c</columns>
    <columns>Policy_Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Name__c</field>
        <operation>equals</operation>
        <value>Professional Indemnity</value>
    </filters>
    <label>Aqueous PI</label>
    <sharedTo>
        <role>Aqueous_Operations</role>
        <role>Aqueous_Underwriter</role>
    </sharedTo>
</ListView>