main/default/objects/Policy__c/listViews/Operations.listView-meta.xml
<ListView>
    <fullName>Operations</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Policy_Status__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Number_Open_Subjectivity_Bound_Quote__c</columns>
    <columns>Binding_License_Number__c</columns>
    <columns>Policy_Document_sent__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Account_Billing_State__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Total_Premium__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Product_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Policy_Document_sent__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Invoice_Status__c</field>
        <operation>notEqual</operation>
        <value>Processed in EPIC</value>
    </filters>
    <filters>
        <field>Product_Name__c</field>
        <operation>notEqual</operation>
        <value>Professional Indemnity</value>
    </filters>
    <filters>
        <field>Number_Open_Subjectivity_Bound_Quote__c</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </filters>
    <label>Operations</label>
</ListView>